# Core

./: .gitignore  .gitmodules  CMakeLists.txt
Include/: Connection.h  ConnectionOwner.h  Core.h  CoreApi.h  CoreExport.h  Global.h  Guid.h  Logger.h  Message.h  MetaObject.h  Network.h  NetworkProtocol.h  Object.h  PlatformImplement.h  Queue.h  Reflect.h
Source/: Connection.cpp  ConnectionOwner.cpp  Core.cpp  Global.cpp  Guid.cpp  Logger.cpp  MetaObject.cpp  NetworkProtocol.cpp  Object.cpp  PlatformImplement.cpp  Reflect.cpp
Tests/: CMakeLists.txt  LoggerTest.cpp  NetworkTest.cpp  NetworkTestClient.cpp  NetworkTestServer.cpp  TestLogger.cpp  TestNetwork.cpp  TestNetworkClient.cpp  TestNetworkServer.cpp  TestThreadContext.cpp
